# insightfinder-mcp-server

./: .dockerignore  .dockerignore.backup  .env.example  .gitignore  Dockerfile  GITHUB_SETUP_GUIDE.md  README.md  SECURITY.md  build-and-publish.sh  docker-requirements.txt  pyproject.toml  requirements.txt  setup-github-registry.sh
.github/workflows/: docker-build-push.yml  docker-publish.yml  docker-publish.yml.backup
client/: .env.example  README-clean.md  README.md  env.example  http_main.py  if_envs.yaml  main.py  requirements-clean.txt  requirements.txt  run_client.sh  sse_main.py  sse_main_clean.py
config/nginx/: nginx-https.conf
scripts/: run_server.sh  setup-https.sh  setup-local-https.sh  test-https.sh  test-local-https.sh  test-sse.sh
src/insightfinder_mcp_server/: main.py  security.py
src/insightfinder_mcp_server/api_client/: client_factory.py  insightfinder_client.py  jira_client.py
src/insightfinder_mcp_server/config/: settings.py
src/insightfinder_mcp_server/security/: __init__.py  auth.py
src/insightfinder_mcp_server/server/: http_server.py  server.py
src/insightfinder_mcp_server/server/resources/: __init__.py  time_tool_resources.py
src/insightfinder_mcp_server/server/tools/: __init__.py  ari_configuration_tools.py  cloudwatch_tools.py  datadog_tools.py  deployment_tools.py  downdetector_slugs.json  downdetector_tools.py  get_time.py  incident_tools.py  jira_tools.py  log_anomaly_tools.py  metric_anomaly_tools.py  metric_data_tools.py  system_info_tools.py  trace_tools.py  weather_tools.py
