[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insightfinder-mcp-server"
version = "1.1.0"
description = "An MCP server for fetching incident data from InsightFinder."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "click>=8.2.0",
    "typer>=0.16.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[project.scripts]
run-insightfinder-mcp-server = "insightfinder_mcp_server.main:run"